<package>
  <name>dvo_core</name>
  <version>0.0.1</version>
  <description>

     dvo_core

  </description>
  <author>Christian Kerl</author>
  <maintainer email="author@email.com">mylxiaoyi</maintainer>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <export>
      <cpp cflags="`rosboost-cfg --cflags` -I${prefix}/include"
        lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -ldvo_core"/>
  </export>
</package>


