<package>
  <name>dvo_slam</name>
  <version>0.0.1</version>
  <description>

     dvo_slam

  </description>
  <author>Christian Kerl</author>
  <license>GPL</license>
  <maintainer email="author@email.com">author</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>cv_bridge</build_depend>
  
  <build_depend>dvo_core</build_depend>
  <build_depend>dvo_ros</build_depend>

  <export>
      <cpp cflags="-I${prefix}/include -I${prefix}/cfg/cpp"
        lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -ldvo_slam"/>
  </export>
</package>


